# bashls

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRATES.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
contrib/: example.sh  init.lua
examples/: lsp_bench.rs
scripts/: get-options.sh
src/: analyser.rs  builtins.rs  config.rs  executables.rs  lib.rs  main.rs  parser.rs  reserved_words.rs  server.rs  snippets.rs
src/handlers/: code_action.rs  completion.rs  formatting.rs  hover.rs  mod.rs  navigation.rs  rename.rs
src/server/: dispatch.rs  mod.rs  state.rs
src/shellcheck/: config.rs  directive.rs  mod.rs  types.rs
src/shfmt/: editorconfig.rs  mod.rs
src/util/: declarations.rs  fs.rs  lsp.rs  mod.rs  sh.rs  shebang.rs  sourcing.rs  tree_sitter.rs
tests/: formatter.rs  integration.rs  linter.rs  sourcing.rs
