[package]
name = "bashls"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of bash-language-server"
license = "MIT"
repository = "https://github.com/k8s-1/bashls"
homepage = "https://github.com/k8s-1/bashls"
keywords = ["bash", "lsp", "language-server", "shell"]
categories = ["development-tools"]
exclude = ["tests/", ".github/", "assets/", "CLAUDE.md", "justfile"]

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tree-sitter = "0.26.9"
tree-sitter-bash = "0.25.1"
walkdir = "2.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
